# forge-executor

./: .dockerignore  .gitignore  .npmrc  .secretscanignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  NOTICE  PROJECT.md  README.md  UPSTREAM.md  VISION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.resources.json  tsconfig.strip-gate.json
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: MIGRATION.md  README.md  db-map.md  prompt-db-combined-map.md  prompt-map.md  token-consumption-savings-evidence.md  tui-audit.md
gitbook/: README.md
mintlify-docs/: docs.json  getting-started.mdx  introduction.mdx
native/: Cargo.toml
native/crates/engine/src/: text.rs
native/npm/darwin-arm64/: package.json
native/npm/darwin-x64/: package.json
native/npm/linux-arm64-gnu/: package.json
native/npm/linux-x64-gnu/: package.json
native/npm/win32-x64-msvc/: package.json
native/scripts/: sync-platform-versions.cjs
pkg/: package.json
plans/: 001-worktree-safety-all-isolation-modes.md  002-dispatch-history-rehydrate-errors.md  003-reset-session-timeout-counter.md  004-batch-slice-queries-state-derivation.md  005-convert-source-grep-tests.md  006-auto-closeout-verdict-tests.md  007-mcp-server-gsd-bridge-seam.md  008-extract-auto-loop-phase-modules.md  009-harden-cloud-pairing-codes.md  010-redact-secrets-in-persisted-logs.md  011-buffer-websocket-sends-cloud-runtime.md  012-graceful-shutdown-sigterm-sigkill-timing.md  (+10 more)
(+922 files in other folders)
