[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.8.1"
edition = "2021"
license = "MIT"
authors = ["GSD Contributors"]
repository = "https://github.com/open-gsd/gsd-pi"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
codegen-units = 256
incremental = true
